--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Core.Entities.ViewModel.Role;
 @using Core.Entities.ViewModel.Request;
 @using Core.Entities.ViewModel.Candidate;
+@using Core.Entities.ViewModel.Major;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
