Added user repo, controller, views, and view model.

--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class=" navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="/LOGO.svg" width="150" height="75" alt="RCJY">
             </a>
@@ -38,7 +38,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2024 - RCCM - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
