--- a/RCCM/Views/User/Index.cshtml
+++ b/RCCM/Views/User/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model List<UserViewModel>
 
-<h1>User List</h1>
+<h1 class="text-center mb-4">قائمة المستخدمين (@Model.Count())</h1>
 
-<table class="table">
-    <thead>
+<table class="table table-hover table-striped">
+    <thead class="bg-primary bg-opacity-75 text-black">
         <tr>
-            <th>User Name</th>
-            <th>User Role</th>
+            <th>اسم المستخدم</th>
+            <th>صلاحيات المستخدم</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -14,7 +15,8 @@
         {
             <tr>
                 <td>@user.UserName</td>
-                
+                <td>@user.RoleName</td>
+                <td><a class="nav-link text-black " width="25" height="25" asp-controller="User" asp-action="Details" asp-route-id="@user.UserId">عرض بيانات المستخدم</a></td>
             </tr>
         }
     </tbody>
