--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -1,10 +1,6 @@
 ﻿@model Core.Entities.ViewModel.AddUserViewModel
-
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-
 @{
     ViewData["Title"] = "Add User";
-
 }
 <h2>Add User</h2>
 
@@ -15,8 +11,8 @@
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="RoleId"></label>
-        <input asp-for="RoleId" class="form-control" />
+        <label asp-for="RoleId">Role</label>
+        <select asp-for="RoleId" class="form-control" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
         <span asp-validation-for="RoleId" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Add User</button>
