fixed some issues

--- a/RCCM/Views/User/Index.cshtml
+++ b/RCCM/Views/User/Index.cshtml
@@ -16,7 +16,7 @@
             <tr>
                 <td>@user.UserName</td>
                 <td>@user.RoleName</td>
-                <td><a class="nav-link text-black "  asp-controller="User" asp-action="Update" asp-route-id="@user.UserId">عرض بيانات المستخدم</a></td>
+                <td><a class="nav-link text-black "  asp-controller="User" asp-action="Update" asp-route-id="@user.RoleId">عرض بيانات المستخدم</a></td>
             </tr>
         }
     </tbody>
