--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Add User";
 }
-<h2>Add User</h2>
+<h2>إضافة مستخدم</h2>
 
 <form asp-action="Add" method="post">
     <div class="form-group">
@@ -18,8 +18,4 @@
     <button type="submit" class="btn btn-primary">Add User</button>
 </form>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+
