--- a/RCCM/Views/User/Index.cshtml
+++ b/RCCM/Views/User/Index.cshtml
@@ -14,6 +14,7 @@
         {
             <tr>
                 <td>@user.UserName</td>
+                <td>@user.RoleName</td>
                 
             </tr>
         }
