--- a/RCCM/Views/User/Index.cshtml
+++ b/RCCM/Views/User/Index.cshtml
@@ -9,6 +9,7 @@
             <th>صلاحيات المستخدم</th>
             <th></th>
             <th></th>
+            
         </tr>
     </thead>
     <tbody>
@@ -18,6 +19,12 @@
                 <td>@user.UserName</td>
                 <td>@user.RoleName</td>
                 <td><a class="nav-link text-black " asp-controller="User" asp-action="Update" asp-route-id="@user.RoleId">عرض بيانات المستخدم</a></td>
+                <td><form class="from-control " asp-action="Delete" asp-controller="User" method="post">
+                <input type="hidden" name="id" value="@user.UserId"/>
+                    <button type="submit" class="btn btn-danger"> حذف المستخدم</button>
+                </form>
+                </td>
+                
 
             </tr>
         }
