--- a/RCCM/Views/User/Index.cshtml
+++ b/RCCM/Views/User/Index.cshtml
@@ -2,6 +2,9 @@
 
 <h1 class="text-center mb-4">قائمة المستخدمين (@Model.Count())</h1>
 
+
+
+<div class="container">
 <table class="table table-hover table-striped">
     <thead class="bg-primary bg-opacity-75 text-black">
         <tr>
@@ -9,7 +12,7 @@
             <th>صلاحيات المستخدم</th>
             <th></th>
             <th></th>
-            
+
         </tr>
     </thead>
     <tbody>
@@ -18,18 +21,24 @@
             <tr>
                 <td>@user.UserName</td>
                 <td>@user.RoleName</td>
-                <td><a class="nav-link text-black " asp-controller="User" asp-action="Update" asp-route-id="@user.RoleId">عرض بيانات المستخدم</a></td>
-                <td><form class="from-control " asp-action="Delete" asp-controller="User" method="post">
-                <input type="hidden" name="id" value="@user.UserId"/>
-                    <button type="submit" class="btn btn-danger"> حذف المستخدم</button>
-                </form>
-                </td>
                 
-
+                <td>
+                    <form asp-action="Edit" method="post">
+                        <input hidden asp-for="@user.UserId" name="id" />
+                        <button class="btn btn-warning" type="submit">تعديل البيانات</button>
+                    </form>
+                </td>
+                    <td>
+                        <form asp-action="Delete" method="post">
+                            <input hidden asp-for="@user.UserId" name="id" />
+                            <button class="btn btn-danger" type="submit">حذف المستخدم</button>
+                        </form>
+                    </td>
             </tr>
         }
 
     </tbody>
 </table>
 
-<a class="nav-link text-black btn btn-primary" asp-controller="User" asp-action="Add"> إضافة مستخدم</a>
+<a class="nav-link text-decoration-none text-white btn btn-primary" asp-controller="User" asp-action="Add"> إضافة مستخدم</a>
+</div>
