--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -14,7 +14,8 @@
         <select asp-for="RoleId" class="form-control" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
     </div>
     <div class="d-flex justify-content-evenly mt-5">
-        <a class="text-decoration-none btn btn-success" asp-action="Index">إضافة المستخدم</a>
+        <button type="submit" class="text-decoration-none btn btn-success">إضافة المستخدم</button>
+        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
     </div>
 </form>
 
