--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -11,10 +11,11 @@
     </div>
     <div class="form-group">
         <label asp-for="RoleId">صلاحية المستخدم</label>
-        <select asp-for="RoleId" class="form-control" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
+        <select asp-for="RoleId" class="form-control select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
     </div>
     <div class="d-flex justify-content-evenly mt-5">
-        <a class="text-decoration-none btn btn-success" asp-action="Index">إضافة المستخدم</a>
+        <button type="submit" class="btn btn-success">إضافة المستخدم</button>
+        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
     </div>
 </form>
 
