Added CRUD for Role Table

--- a/RCCM/Views/User/Edit.cshtml
+++ b/RCCM/Views/User/Edit.cshtml
@@ -1,5 +1,7 @@
-﻿
-@model UpdateUserViewModel
+﻿@model UpdateUserViewModel
+@{
+    ViewData["Title"] = "Edit User Data";
+}
 
 <h2>تحديث مستخدم</h2>
 
