--- a/RCCM/Views/Role/Index.cshtml
+++ b/RCCM/Views/Role/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@model List<UserViewModel>
+﻿@model List<RoleViewModel>
 
-<h1 class="text-center mb-4">قائمة المستخدمين (@Model.Count())</h1>
+
+<h1 class="text-center mb-4">قائمة الصلاحيات (@Model.Count())</h1>
 
 
 
@@ -8,30 +9,28 @@
     <table class="table table-hover table-striped">
         <thead class="bg-primary bg-opacity-75 text-black">
             <tr>
-                <th>اسم المستخدم</th>
-                <th>صلاحيات المستخدم</th>
+                <th>اسم الصلاحيات</th>
                 <th></th>
                 <th></th>
 
             </tr>
         </thead>
         <tbody>
-            @foreach (var user in Model)
+            @foreach (var role in Model)
             {
                 <tr>
-                    <td>@user.UserName</td>
-                    <td>@user.RoleName</td>
+                    <td>@role.RoleName</td>
 
                     <td>
                         <form asp-action="Edit" method="post">
-                            <input hidden asp-for="@user.UserId" name="id" />
+                            <input hidden name="RoleId" asp-for="@role.RoleId" />
                             <button class="btn btn-warning" type="submit">تعديل البيانات</button>
                         </form>
                     </td>
                     <td>
                         <form asp-action="Delete" method="post">
-                            <input hidden asp-for="@user.UserId" name="id" />
-                            <button class="btn btn-danger" type="submit">حذف المستخدم</button>
+                            <input hidden name="roleId" asp-for="@role.RoleId" />
+                            <button class="btn btn-danger" type="submit">حذف الصلاحية</button>
                         </form>
                     </td>
                 </tr>
@@ -40,5 +39,5 @@
         </tbody>
     </table>
 
-    <a class="nav-link text-decoration-none text-white btn btn-success" asp-controller="User" asp-action="Add"> إضافة مستخدم</a>
+    <a class="nav-link text-decoration-none text-white btn btn-primary" asp-controller="Role" asp-action="Add"> إضافة صلاحية</a>
 </div>
