--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
         <label asp-for="RoleId">صلاحية المستخدم</label>
-        <select asp-for="RoleId" class="form-control select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
+        <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
     </div>
     <div class="d-flex justify-content-evenly mt-5">
         <button type="submit" class="btn btn-success">إضافة المستخدم</button>
