Implemnted Read operation for request and candidate tables.

--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Core.Entities.ViewModel
 @using Core.Entities.ViewModel.Role
+@using Core.Entities.ViewModel.Request
+@using Core.Entities.ViewModel.Candidate
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
