--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">الصلاحيات</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nationality" asp-action="Index">Nationality</a>
+                        </li>
                     </ul>
                 </div>
             </div>
