--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -8,45 +8,74 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.rtl.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RCCM.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
 </head>
 <body>
     <header>
-        <nav class=" navbar navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index">
-                <img src="/LOGO.svg" width="150" height="75" alt="RCJY">
+        <nav class="navbar navbar-expand-sm mb-3 bg">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <img src="/LOGO.ico" width="270" height="75" alt="RCJY">
             </a>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+               
+                    </button>
+                <div class="d-sm-inline-flex">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
                         </li>
+                        <li class="nav-item border-start mx-2 mx-2"></li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">سياسة الخصوصية</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
+                        </li>
+                        <li class="nav-item border-start mx-2 mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="CandidateIndex">المرشحين</a>
+                        </li>
+                        <li class="nav-item border-start mx-2 mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Interview" asp-action="InterviewIndex">المقابلات الشخصيه</a>
+                        </li>
+                        <li class="nav-item border-start mx-2"></li> 
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="Index">العرض الوظيفي</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+
+
+
+
+    <div class="bg-tiled">
+        <div class="container-fluid">
+            <main role="main" class="main-content">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted fixed-bottom">
-        <div class="container">
-            &copy; 2024 - RCCM - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+    <footer class="border-top footer text fixed-bottom bg text-white text-center">
+        <div class="container ">
+            &copy; 2024 - RCCM</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
