--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -14,53 +14,60 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm mb-3 bg">
+        <!-- User Nav Bar -->
+        <nav class="navbar navbar-expand-sm mb-3 bg user-navbar">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="/LOGO.ico" width="270" height="75" alt="RCJY">
             </a>
-            <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-               
-                    </button>
-                <div class="d-sm-inline-flex">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
                         </li>
-                        <li class="nav-item border-start mx-2 mx-2"></li>
+                        <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
                         </li>
-                        <li class="nav-item border-start mx-2 mx-2"></li>
+                        <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="CandidateIndex">المرشحين</a>
                         </li>
-                        <li class="nav-item border-start mx-2 mx-2"></li>
+                        <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Interview" asp-action="InterviewIndex">المقابلات الشخصيه</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">الصفحة الرئيسية</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">المستخدمين</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Role" asp-action="Index">الصلاحيات</a>
-                        </li>
-                        <li class="nav-item border-start mx-2"></li> 
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="" asp-action="Index">العرض الوظيفي</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Candidate" asp-action="Index">المرشحين</a>
-                        </li
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Major" asp-action="Index">التخصصات</a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+           
 
+     
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="d-sm-inline-flex collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item border-start mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Index">المستخدمين</a>
+                        </li>
+                        <li class="nav-item border-start mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Role" asp-action="Index">الصلاحيات</a>
+                        </li>
+                        <li class="nav-item border-start mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="Index">المرشحين</a>
+                        </li>
+                        <li class="nav-item border-start mx-2"></li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Major" asp-action="Index">التخصصات</a>
+                        </li>
+                    </ul>
+                </nav>
+    </header>
 
 
 
@@ -82,10 +89,14 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+
 
 </body>
 
