--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Major" asp-action="Index">التخصصات</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Nationality" asp-action="Index">الجنسيات</a>
+                        </li>
                     </ul>
                 </div>
             </div>
