--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Core.Entities.ViewModel.Request;
 @using Core.Entities.ViewModel.Candidate;
 @using Core.Entities.ViewModel.Major;
+@using Core.Entities.ViewModel.Nationality;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
