--- a/RCCM/Views/Candidate/Edit.cshtml
+++ b/RCCM/Views/Candidate/Edit.cshtml
@@ -1,8 +1,9 @@
-﻿@model AddCandidateViewModel
+﻿@model UpdateCandidateViewModel
 
-<h2>إضافة مرشح</h2>
 
-<form asp-action="Add" method="post">
+<h2>تحديث معلومات مرشح</h2>
+
+<form asp-action="EditCandidate" method="post">
     <div class="form-group">
         <label asp-for="CandidateName">اسم المرشح</label>
         <input asp-for="CandidateName" class="form-control" />
@@ -10,7 +11,7 @@
 
     <div class="form-group">
         <label asp-for="NationalId">رقم الهوية</label>
-        <input asp-for="NationalId" type="number" class="form-control" maxlength="10">
+        <input asp-for="NationalId"  class="form-control" >
     </div>
     <div class="form-group">
         <label asp-for="DateOfBirth">تاريخ الميلاد</label>
@@ -20,10 +21,10 @@
         <label asp-for="Email">البريد الإلكتروني</label>
         <input asp-for="Email" type="email" class="form-control">
     </div>
-    
+
     <div class="form-group">
         <label asp-for="PhoneNumber">رقم الهاتف</label>
-        <input asp-for="PhoneNumber" type="number" class="form-control">
+        <input asp-for="PhoneNumber" class="form-control">
     </div>
 
     <label asp-for="Gender" class="form-label mt-3">الجنس: </label>
@@ -38,19 +39,18 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="MajorId" class="form-check-label">التخصص الجامعي</label>
-        <select asp-for="MajorId" class="form-control form-select" asp-items="@(new SelectList(Model.Majors, "MajorId", "MajorName"))"></select>
+        <label asp-for="Major.MajorId" class="form-check-label">التخصص الجامعي</label>
+        <select asp-for="Major.MajorId" class="form-control form-select" asp-items="@(new SelectList(Model.Majors, "MajorId", "MajorName",Model.Major.MajorId))"></select>
     </div>
 
     <div class="form-group">
-        <label asp-for="NationalityId" class="form-check-label">الجنسية</label>
-        <select asp-for="NationalityId" class="form-control form-select" asp-items="@(new SelectList(Model.Nationalities, "NationalityId", "NationalityName"))"></select>
+        <label asp-for="Nationality.NationalityId" class="form-check-label">الجنسية</label>
+        <select asp-for="Nationality.NationalityId" class="form-control form-select" asp-items="@(new SelectList(Model.Nationalities, "NationalityId", "NationalityName",Model.Nationality.NationalityId))"></select>
     </div>
-
-
+    <input hidden asp-for="CandidateId" />
 
     <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">إضافة المرشح</button>
+        <button type="submit" class="btn btn-success">تحديث المرشح</button>
         <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المرشحين</a>
     </div>
 </form>
