Fixed some database error and CandidateStatus bugs.

--- a/RCCM/Views/CandidateStatus/Delete.cshtml
+++ b/RCCM/Views/CandidateStatus/Delete.cshtml
@@ -5,7 +5,7 @@
 
 <h2>حذف الحالة</h2>
 
-<form asp-action="DeleteRole" method="post">
+<form asp-action="DeleteCandidateStatus" method="post">
     <p><strong>اسم الحالة:</strong> @Model.Status</p>
     <input type="hidden"  asp-for="CandidateStatusId" />
     <input type="hidden"  asp-for="Status" />
