--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CandidateStatus" asp-action="Index">الحالات</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ExamTypeConf" asp-action="Index">الاختبارات</a>
+                        </li>
                     </ul>
                 </div>
             </div>
