--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Core.Entities.ViewModel.Major;
 @using Core.Entities.ViewModel.Nationality;
 @using Core.Entities.ViewModel.CandidateStatus;
+@using Core.Entities.ViewModel.ExamTypeConf;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
