--- a/RCCM/Views/Candidate/Edit.cshtml
+++ b/RCCM/Views/Candidate/Edit.cshtml
@@ -47,6 +47,12 @@
         <label asp-for="Nationality.NationalityId" class="form-check-label">الجنسية</label>
         <select asp-for="Nationality.NationalityId" class="form-control form-select" asp-items="@(new SelectList(Model.Nationalities, "NationalityId", "NationalityName",Model.Nationality.NationalityId))"></select>
     </div>
+
+    <div class="form-group">
+        <label asp-for="CandidateStatusId" class="form-check-label">حالة المرشح</label>
+        <select asp-for="CandidateStatusId" class="form-control form-select" asp-items="@(new SelectList(Model.CandidateStatuses, "CandidateStatusId", "CandidateStatusName"))"></select>
+    </div>
+
     <input hidden asp-for="CandidateId" />
 
     <div class="d-flex justify-content-evenly mt-5">
