--- a/RCCM/Views/ExamTypeConf/Index.cshtml
+++ b/RCCM/Views/ExamTypeConf/Index.cshtml
@@ -43,5 +43,5 @@
         </tbody>
     </table>
 
-    <a class="nav-link text-decoration-none text-white btn btn-primary" asp-controller="ExamTypeConf" asp-action="Add"> إضافة صلاحية</a>
+    <a class="nav-link text-decoration-none text-white btn btn-primary" asp-controller="ExamTypeConf" asp-action="Add"> Add Exam Type</a>
 </div>
