--- a/RCCM/Views/Shared/_Layout.cshtml
+++ b/RCCM/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html lang="ar-sa" dir="rtl">
 <head>
     <meta charset="utf-8" />
@@ -45,6 +45,12 @@
                         </li>
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ExamTypeConf" asp-action="Index">الاختبارات</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ExamResult" asp-action="Index">نتائج الاختبارات</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Interview" asp-action="Index">Interview </a>
                         </li>
                     </ul>
                 </div>
