--- a/RCCM/Views/ExamTypeConf/Add.cshtml
+++ b/RCCM/Views/ExamTypeConf/Add.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AddExamTypeConfViewModel
 @{
-    ViewData["Title"] = "Add Status";
+    ViewData["Title"] = "Add Exam";
 }
 
-<h2>إضافة حالة</h2>
+<h2>إضافة اختبار</h2>
 
 <form asp-action="AddExamTypeConf" method="post">
     <div class="form-group">
@@ -13,12 +13,12 @@
 
     <div class="form-group">
         <label asp-for="StartDate">بداية فترة الاختبار</label>
-        <input asp-for="StartDate" class="form-control form-text" />
+        <input asp-for="StartDate" type="date" value="@DateTime.Now" class="form-control form-text" />
     </div>
 
     <div class="form-group">
         <label asp-for="EndDate">نهاية فترة الاختبار</label>
-        <input asp-for="EndDate" class="form-control form-text" />
+        <input asp-for="EndDate" type="date" value="@DateTime.Now" class="form-control form-text" />
     </div>
 
 
