--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -6,4 +6,6 @@
 @using Core.Entities.ViewModel.Nationality;
 @using Core.Entities.ViewModel.CandidateStatus;
 @using Core.Entities.ViewModel.ExamTypeConf;
+@using Core.Entities.ViewModel.ExamResult;
+@using Core.Entities.ViewModel.Interview;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
