--- a/RCCM/Views/Grade/Edit.cshtml
+++ b/RCCM/Views/Grade/Edit.cshtml
@@ -1,22 +1,19 @@
-﻿@model UpdateUserViewModel
+﻿@model UpdateGradeViewModel
 @{
-    ViewData["Title"] = "Edit User Data";
+    ViewData["Title"] = "Edit Grade Data";
 }
 
 <h2>تحديث مستخدم</h2>
 
-<form class=" " asp-action="EditUser" method="post">
+<form class=" " asp-action="EditGrade" method="post">
     <div class="form-group">
-        <label asp-for="UserName">اسم المستخدم</label>
-        <input asp-for="UserName" class="form-control form-text" value="@Model.UserName" />
+        <label asp-for="GradeValue">درجة الاختبار</label>
+        <input asp-for="GradeValue" class="form-control form-text" value="@Model.GradeValue" />
     </div>
-    <div class="form-group">
-        <label asp-for="RoleId">صلاحية المستخدم</label>
-        <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName",Model.RoleId))"></select>
-    </div>
-    <input hidden asp-for="UserId" />
+  
+    <input hidden asp-for="GradeId" />
     <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">تحديث بيانات المستخدم</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
+        <button type="submit" class="btn btn-success">تحديث بيانات دؤجة الاختبار</button>
+        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الدرجات</a>
     </div>
 </form>
