--- a/RCCM/Views/Grade/Index.cshtml
+++ b/RCCM/Views/Grade/Index.cshtml
@@ -6,8 +6,8 @@
     <table class="table table-hover table-striped">
         <thead class="bg-primary bg-opacity-75 text-black">
             <tr>
-                <th>اسم المستخدم</th>
                 <th>درجة الاختبار</th>
+                <th></th>
                 <th></th>
                 <th></th>
             </tr>
@@ -27,7 +27,7 @@
                     <td>
                         <form asp-action="Delete" method="post">
                             <input hidden asp-for="@grade.GradeId" name="id" />
-                            <button class="btn btn-danger" type="submit">حذف المستخدم</button>
+                            <button class="btn btn-danger" type="submit">حذف درجة الاختبار</button>
                         </form>
                     </td>
                 </tr>
@@ -35,5 +35,5 @@
         </tbody>
     </table>
 
-    <a class="nav-link text-decoration-none text-white btn btn-success" asp-controller="Grade" asp-action="Add"> إضافة مستخدم</a>
+    <a class="nav-link text-decoration-none text-white btn btn-success" asp-controller="Grade" asp-action="Add"> إضافة درجة الاختبار</a>
 </div>
