--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Core.Entities.ViewModel.Candidate;
 @using Core.Entities.ViewModel.Major;
 @using Core.Entities.ViewModel.Nationality;
+@using Core.Entities.ViewModel.Grade;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
